Calendario ultimo backup

--- a/calendar/index.html
+++ b/calendar/index.html
@@ -26,20 +26,59 @@
     <main class="container my-5">
       <table class="table table-bordered">
         <thead class="thead-light">
-          <tr>
-            <th>Hora</th>
-            <th>Lunes</th>
-            <th>Martes</th>
-            <th>Miércoles</th>
-            <th>Jueves</th>
-            <th>Viernes</th>
-            <th>Sábado</th>
-            <th>Domingo</th>
-          </tr>
+            <tr>
+              <th rowspan="2">Actividad</th>
+              <th colspan="2">Lunes</th>
+              <th colspan="2">Martes</th>
+              <th colspan="2">Miércoles</th>
+              <th colspan="2">Jueves</th>
+              <th colspan="2">Viernes</th>
+              <th colspan="2">Sábado</th>
+              <th colspan="2">Domingo</th>
+            </tr>
+            <tr>
+                <td>Inicio</td>
+                <td>Fin</td>
+                <td>Inicio</td>
+                <td>Fin</td>
+                <td>Inicio</td>
+                <td>Fin</td>
+                <td>Inicio</td>
+                <td>Fin</td>
+                <td>Inicio</td>
+                <td>Fin</td>
+                <td>Inicio</td>
+                <td>Fin</td>
+                <td>Inicio</td>
+                <td>Fin</td>
+            </tr>
         </thead>
         <tbody>
           <tr>
-            <td>08:00 - 09:00</td>
+            <td>Clase</td>
+            <td colspan="5">8:15</td>
+            <td colspan="5">14:15</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td>Entreno</td>
+            <td>18:30 </td><td> 22:00</td>
+            <td>19:00 </td><td> 20:15</td>
+            <td>18:30 </td><td> 22:00</td>
+            <td>19:00 </td><td> 20:15</td>
+            <td>17:30 </td><td> 18:30</td>
+            <td>11:30 </td><td> 12:30</td>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td>Trabajo</td>
+            <td></td>
+            <td></td>
+            <td></td>
             <td></td>
             <td></td>
             <td></td>
@@ -49,17 +88,10 @@
             <td></td>
           </tr>
           <tr>
-            <td>09:00 - 10:00</td>
+            <td>Viaje</td>
             <td></td>
             <td></td>
             <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-          </tr>
-          <tr>
-            <td>10:00 - 11:00</td>
             <td></td>
             <td></td>
             <td></td>
@@ -68,8 +100,43 @@
             <td></td>
             <td></td>
           </tr>
-          <!-- Añade más filas según necesites -->
         </tbody>
+      </table>
+    </main>
+    <br><br><br>
+    <header class="bg-primary text-white text-center py-4">
+      <h1>Horario Semanal</h1>
+    </header>
+    <main class="container my-5">
+      <table class="table table-bordered">
+        <thead class="thead-light">
+            <tr>
+              <th rowspan="2">Actividad</th>
+              <th colspan="2">Lunes</th>
+              <th colspan="2">Martes</th>
+              <th colspan="2">Miércoles</th>
+              <th colspan="2">Jueves</th>
+              <th colspan="2">Viernes</th>
+              <th colspan="2">Sábado</th>
+              <th colspan="2">Domingo</th>
+            </tr>
+            <tr>
+                <td>Inicio</td>
+                <td>Fin</td>
+                <td>Inicio</td>
+                <td>Fin</td>
+                <td>Inicio</td>
+                <td>Fin</td>
+                <td>Inicio</td>
+                <td>Fin</td>
+                <td>Inicio</td>
+                <td>Fin</td>
+                <td>Inicio</td>
+                <td>Fin</td>
+                <td>Inicio</td>
+                <td>Fin</td>
+            </tr>
+        </thead>
       </table>
     </main>
     <footer class="bg-light text-center py-4">
