--- a/calendar/index.html
+++ b/calendar/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Organigrama</title>
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="./css/style.css">
   <!DOCTYPE html>
   <html lang="es">
   <head>
@@ -24,7 +25,7 @@
       <h1>Horario Semanal</h1>
     </header>
     <main class="container my-5">
-      <table class="table table-bordered">
+      <table class="table table-sm">
         <thead class="thead-light">
             <tr>
               <th rowspan="2">Actividad</th>
@@ -37,68 +38,61 @@
               <th colspan="2">Domingo</th>
             </tr>
             <tr>
-                <td>Inicio</td>
-                <td>Fin</td>
-                <td>Inicio</td>
-                <td>Fin</td>
-                <td>Inicio</td>
-                <td>Fin</td>
-                <td>Inicio</td>
-                <td>Fin</td>
-                <td>Inicio</td>
-                <td>Fin</td>
-                <td>Inicio</td>
-                <td>Fin</td>
-                <td>Inicio</td>
-                <td>Fin</td>
+              <td class="cuerpo">Inicio</td>
+              <td class="cuerpo">Fin</td>
+              <td class="cuerpo">Inicio</td>
+              <td class="cuerpo">Fin</td>
+              <td class="cuerpo">Inicio</td>
+              <td class="cuerpo">Fin</td>
+              <td class="cuerpo">Inicio</td>
+              <td class="cuerpo">Fin</td>
+              <td class="cuerpo">Inicio</td>
+              <td class="cuerpo">Fin</td>
+              <td class="cuerpo">Inicio</td>
+              <td class="cuerpo">Fin</td>
+              <td class="cuerpo">Inicio</td>
+              <td class="cuerpo">Fin</td>
             </tr>
         </thead>
         <tbody>
           <tr>
             <td>Clase</td>
-            <td colspan="5">8:15</td>
-            <td colspan="5">14:15</td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td colspan="5" class="cuerpo">8:15</td>
+            <td colspan="5" class="cuerpo">14:15</td>
+            <td class="cuerpo"></td>
+            <td class="cuerpo"></td>
+            <td class="cuerpo"></td>
+            <td class="cuerpo"></td>
           </tr>
           <tr>
             <td>Entreno</td>
-            <td>18:30 </td><td> 22:00</td>
-            <td>19:00 </td><td> 20:15</td>
-            <td>18:30 </td><td> 22:00</td>
-            <td>19:00 </td><td> 20:15</td>
-            <td>17:30 </td><td> 18:30</td>
-            <td>11:30 </td><td> 12:30</td>
-            <td></td>
-            <td></td>
+            <td class="cuerpo">18:30 </td><td class="cuerpo"> 22:00</td>
+            <td class="cuerpo">19:00 </td><td class="cuerpo"> 20:15</td>
+            <td class="cuerpo">18:30 </td><td class="cuerpo"> 22:00</td>
+            <td class="cuerpo">19:00 </td><td class="cuerpo"> 20:15</td>
+            <td class="cuerpo">17:30 </td><td class="cuerpo"> 18:30</td>
+            <td class="cuerpo">11:30 </td><td class="cuerpo"> 12:30</td>
+            <td class="cuerpo"></td><td class="cuerpo"> </td>
           </tr>
           <tr>
             <td>Trabajo</td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td class="cuerpo"></td><td class="cuerpo"> </td>
+            <td class="cuerpo"></td><td class="cuerpo"> </td>
+            <td class="cuerpo"></td><td class="cuerpo"> </td>
+            <td class="cuerpo"></td><td class="cuerpo"> </td>
+            <td class="cuerpo"></td><td class="cuerpo"> </td>
+            <td class="cuerpo"></td><td class="cuerpo"> </td>
+            <td class="cuerpo"></td><td class="cuerpo"> </td>
           </tr>
           <tr>
             <td>Viaje</td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td class="cuerpo"></td><td class="cuerpo"> </td>
+            <td class="cuerpo"></td><td class="cuerpo"> </td>
+            <td class="cuerpo"></td><td class="cuerpo"> </td>
+            <td class="cuerpo"></td><td class="cuerpo"> </td>
+            <td class="cuerpo"></td><td class="cuerpo"> </td>
+            <td class="cuerpo"></td><td class="cuerpo"> </td>
+            <td class="cuerpo"></td><td class="cuerpo"> </td>
           </tr>
         </tbody>
       </table>
