--- a/web-ingles/index.html
+++ b/web-ingles/index.html
@@ -118,8 +118,8 @@
             <div class="container px-4 px-lg-5 bg-black">
                 <div class="row gx-4 gx-lg-5">
                     <div class="col-md-4 mb-3 mb-md-0 tarjetas">
-                        <div class="card py-4 h-100">
-                            <div class="card-body text-center">
+                        <div class="card py-4 h-100 tarjetas">
+                            <div class="card-body text-center tarjetas">
                                 <i class="fas fa-map-marked-alt text-primary mb-2"></i>
                                 <h4 class="text-uppercase m-0">Address</h4>
                                 <hr class="my-4 mx-auto" />
@@ -128,8 +128,8 @@
                         </div>
                     </div>
                     <div class="col-md-4 mb-3 mb-md-0 tarjetas">
-                        <div class="card py-4 h-100">
-                            <div class="card-body text-center">
+                        <div class="card py-4 h-100 tarjetas">
+                            <div class="card-body text-center tarjetas">
                                 <i class="fas fa-envelope text-primary mb-2"></i>
                                 <h4 class="text-uppercase m-0">Email</h4>
                                 <hr class="my-4 mx-auto" />
@@ -138,8 +138,8 @@
                         </div>
                     </div>
                     <div class="col-md-4 mb-3 mb-md-0 tarjetas">
-                        <div class="card py-4 h-100">
-                            <div class="card-body text-center">
+                        <div class="card py-4 h-100 tarjetas">
+                            <div class="card-body text-center tarjetas">
                                 <i class="fas fa-mobile-alt text-primary mb-2"></i>
                                 <h4 class="text-uppercase m-0">Phone</h4>
                                 <hr class="my-4 mx-auto" />
