--- a/web-ingles/index.html
+++ b/web-ingles/index.html
@@ -123,7 +123,7 @@
                                 <i class="fas fa-map-marked-alt text-primary mb-2"></i>
                                 <h4 class="text-uppercase m-0">Address</h4>
                                 <hr class="my-4 mx-auto" />
-                                <div class="small text-black-50">4923 PC Power Solutions, Orlando FL</div>
+                                <div class="small text-white-50">4923 PC Power Solutions, Orlando FL</div>
                             </div>
                         </div>
                     </div>
@@ -133,7 +133,7 @@
                                 <i class="fas fa-envelope text-primary mb-2"></i>
                                 <h4 class="text-uppercase m-0">Email</h4>
                                 <hr class="my-4 mx-auto" />
-                                <div class="small text-black-50"><a href="#!">info@pcpowersolutions.com</a></div>
+                                <div class="small text-white-50"><a href="#!">info@pcpowersolutions.com</a></div>
                             </div>
                         </div>
                     </div>
@@ -143,7 +143,7 @@
                                 <i class="fas fa-mobile-alt text-primary mb-2"></i>
                                 <h4 class="text-uppercase m-0">Phone</h4>
                                 <hr class="my-4 mx-auto" />
-                                <div class="small text-black-50">+1 (555) 902-8832</div>
+                                <div class="small text-white-50">+1 (555) 902-8832</div>
                             </div>
                         </div>
                     </div>
