--- a/web-ingles/index.html
+++ b/web-ingles/index.html
@@ -116,7 +116,7 @@
         <!-- Contact-->
         <section class="contact-section bg-black">
             <div class="container px-4 px-lg-5 bg-black">
-                <div class="row gx-4 gx-lg-5">
+                <div class="row gx-4 gx-lg-5 agrupart">
                     <div class="col-md-4 mb-3 mb-md-0 tarjetas">
                         <div class="card py-4 h-100 tarjetas">
                             <div class="card-body text-center tarjetas">
