--- a/web-ingles/index.html
+++ b/web-ingles/index.html
@@ -57,7 +57,7 @@
                             <div class="project-text w-100 my-auto text-center text-lg-left">
                                 <h4 class="text-white">Exclusive Experience</h4>
                                 <p class="mb-0 text-white-50">Upon successful verification, you will receive a Ruby Box containing documentation and a technician will install our network on your devices, including a custom mobile phone with our private OS.</p>
-                                <h4>Features:</h4>
+                                <h4 style="color: white;">Features:</h4>
                                 <table>
                                     <tr>
                                         <td>Privacy</td>
