--- a/web-ingles/index.html
+++ b/web-ingles/index.html
@@ -37,7 +37,7 @@
     <section class="process-section">
         <div class="container px-4 px-lg-5">
             <div class="row gx-0 justify-content-center">
-                <div class="col-lg-6"><img class="img-fluid" src="./assets/img/check.jpg" alt="Verification Process" /></div>
+                <div class="col-lg-6"><img class="img-fluid" src="https://cdn4.iconfinder.com/data/icons/security-39/92/icon91-18-512.png" alt="Verification Process" /></div>
                 <div class="col-lg-6 order-lg-first">
                     <div class="bg-black text-center h-100 project">
                         <div class="d-flex h-100">
