--- a/web-lenguajes/index.html
+++ b/web-lenguajes/index.html
@@ -17,8 +17,7 @@
                 <li><a href="">Menú</a></li>
                 <li><a href="">Más ...</a>
                     <ul>
-                        <li><a href="">Opcion</a></li>
-                        <li><a href="">Opcion</a></li>
+                        <li><a href="./src/menu.html">Carta</a></li>
                     </ul>
                 </li>
                 <li>
@@ -33,8 +32,12 @@
     </div>
     <div class="container">
         <div class="sidebar">
-            <h2>Publicidad</h2>
-            <p>Anuncio 1</p>
+            <div class="caja-publi">
+                <img src="./img/anuncios/a1.jpg" alt="">
+            </div>
+            <div class="caja-publi">
+                <img src="./img/anuncios/a3.jpg" alt="">
+            </div>
         </div>
         <div class="content">
             <div class="bienvenida">
@@ -46,8 +49,12 @@
             </div>
         </div>
         <div class="sidebar">
-            <h2>Publicidad</h2>
-            <p>Anuncio 2</p>
+            <div class="caja-publi">
+                <img src="./img/anuncios/a4.jpg" alt="">
+            </div>
+            <div class="caja-publi">
+                <img src="./img/anuncios/a2.jpg" alt="">
+            </div>
         </div>
     </div>
     <div class="footer">
