--- a/web-lenguajes/index.html
+++ b/web-lenguajes/index.html
@@ -1,64 +1,75 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style/style.css">
-    <link rel="stylesheet" href="style/menu.css">
-    <title>Restaurante Ejemplo</title>
-    <style>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="style/style.css">
+        <link rel="stylesheet" href="style/menu.css">
+        <title>Restaurante Ejemplo</title>
+        <style>
     </style>
-</head>
-<body>
-    <div class="header">
-        <nav>
-            <ul>
-                <li><a href="#">Inicio</a></li>
-                <li><a href="">Menú</a></li>
-                <li><a href="">Más ...</a>
-                    <ul>
-                        <li><a href="./src/menu.html">Carta</a></li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="">Cuenta</a>
-                    <ul>
-                        <li><a href="">Iniciar sesion</a></li>
-                        <li><a href="">Registrarse</a></li>
-                    </ul>
-                </li>
-            </ul>
-        </nav>
-    </div>
-    <div class="container">
-        <div class="sidebar">
+    </head>
+    <body>
+        <div class="header">
+            <nav>
+                <ul>
+                    <li><a href="#">Inicio</a></li>
+                    <li><a href>Menú</a></li>
+                    <li><a href>Más ...</a>
+                        <ul>
+                            <li><a href="./src/menu.html">Carta</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href>Cuenta</a>
+                        <ul>
+                            <li><a href>Iniciar sesion</a></li>
+                            <li><a href>Registrarse</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+        <div class="sidebar izquierda">
             <div class="caja-publi">
-                <img src="./img/anuncios/a1.jpg" alt="">
+                <img src="./img/anuncios/a1.jpg" alt>
             </div>
             <div class="caja-publi">
-                <img src="./img/anuncios/a3.jpg" alt="">
+                <img src="./img/anuncios/a3.jpg" alt>
             </div>
         </div>
-        <div class="content">
-            <div class="bienvenida">
-                <div class="contenidos">
-                    <h1>Bienvenidos a Ramses</h1>
-                    <p>Esperamos que disfrute de nuestra hospitalidad y servicion para satisfacer todas sus necesidades.</p>
-                    <button class="btn-saber-mas"><a  href="menu.html">Saber Mas -></a></button>
+        <div class="container">
+            <div class="content">
+                <div class="bienvenida">
+                    <div class="contenidos">
+                        <h1>Bienvenidos a Ramses</h1>
+                        <p>Esperamos que disfrute de nuestra hospitalidad y
+                            servicion para satisfacer todas sus necesidades.</p>
+                        <button class="btn-saber-mas"><a href="menu.html">Saber
+                                Mas -></a></button>
+                    </div>
+                </div>
+            </div><div class="cuerpo"> <h1>Bienvenido al restaurante ramses</h1>
+                <p>Nuestros distinguidos clientes son lo mas importate</p>
+                <p>Esperamos que junto al gran servicio y hospitalidad de
+                    nuestro equipo disfrute en nuetro restaurante de la buena
+                    comida y la cercania de la familia en un paraej natural
+                    inigualable junto a una preciosa playa con un paisaje de
+                    ensueño. Deseamos que nuestro restaurante sea su nuevo
+                    hogar.</p>
+            </div>
+            </div>
+            <div class="sidebar derecha">
+                <div class="caja-publi">
+                    <img src="./img/anuncios/a4.jpg" alt>
+                </div>
+                <div class="caja-publi">
+                    <img src="./img/anuncios/a2.jpg" alt>
                 </div>
             </div>
-        </div>
-        <div class="sidebar">
-            <div class="caja-publi">
-                <img src="./img/anuncios/a4.jpg" alt="">
+            <div class="footer">
+                <p>&copy; 2025 Restaurante Ejemplo. Todos los derechos
+                    reservados.</p>
             </div>
-            <div class="caja-publi">
-                <img src="./img/anuncios/a2.jpg" alt="">
-            </div>
-        </div>
-    </div>
-    <div class="footer">
-        <p>&copy; 2025 Restaurante Ejemplo. Todos los derechos reservados.</p>
-    </div>
-</body>
-</html>
+        </body>
+    </html>
