--- a/web-lenguajes/index.html
+++ b/web-lenguajes/index.html
@@ -49,7 +49,8 @@
                                 Mas -></a></button>
                     </div>
                 </div>
-            </div><div class="cuerpo"> <h1>Bienvenido al restaurante ramses</h1>
+            </div><div class="cuerpo"> 
+                <h1>Bienvenido al restaurante ramses</h1>
                 <p>Nuestros distinguidos clientes son lo mas importate</p>
                 <p>Esperamos que junto al gran servicio y hospitalidad de
                     nuestro equipo disfrute en nuetro restaurante de la buena
