--- a/web-lenguajes/index.html
+++ b/web-lenguajes/index.html
@@ -49,7 +49,7 @@
                                 Mas -></a></button>
                     </div>
                 </div>
-            </div><div class="cuerpo"> 
+            </div><div class="cuerpo">
                 <h1>Bienvenido al restaurante ramses</h1>
                 <p>Nuestros distinguidos clientes son lo mas importate</p>
                 <p>Esperamos que junto al gran servicio y hospitalidad de
@@ -58,19 +58,31 @@
                     inigualable junto a una preciosa playa con un paisaje de
                     ensueño. Deseamos que nuestro restaurante sea su nuevo
                     hogar.</p>
+                <table class="horariotable">
+                    <tr> <th class="table-header" colspan="3">HORARIO</th>
+                    </tr> <tr> <td>Días</td> <td>Apertura</td> <td>Cierre</td>
+                    </tr> <tr> <td>Lunes</td> <td>08:00</td> <td>20:00</td>
+                    </tr> <tr> <td>Martes</td> <td>08:00</td> <td>20:00</td>
+                    </tr> <tr> <td>Miércoles</td> <td>08:00</td> <td>20:00</td>
+                    </tr> <tr> <td>Jueves</td> <td>08:00</td> <td>20:00</td>
+                    </tr> <tr> <td>Viernes</td> <td>08:00</td> <td>22:00</td>
+                    </tr> <tr> <td>Sábado</td> <td>10:00</td> <td>22:00</td>
+                    </tr> <tr> <td>Domingo</td> <td>10:00</td> <td>20:00</td>
+                    </tr>
+                </table>
             </div>
+        </div>
+        <div class="sidebar derecha">
+            <div class="caja-publi">
+                <img src="./img/anuncios/a4.jpg" alt>
             </div>
-            <div class="sidebar derecha">
-                <div class="caja-publi">
-                    <img src="./img/anuncios/a4.jpg" alt>
-                </div>
-                <div class="caja-publi">
-                    <img src="./img/anuncios/a2.jpg" alt>
-                </div>
+            <div class="caja-publi">
+                <img src="./img/anuncios/a2.jpg" alt>
             </div>
-            <div class="footer">
-                <p>&copy; 2025 Restaurante Ejemplo. Todos los derechos
-                    reservados.</p>
-            </div>
-        </body>
+        </div>
+        <div class="footer">
+            <p>&copy; 2025 Restaurante Ejemplo. Todos los derechos
+                reservados.</p>
+        </div>
+    </body>
     </html>
