--- a/web-lenguajes/index.html
+++ b/web-lenguajes/index.html
@@ -17,7 +17,7 @@
                     <li><a href>Menú</a></li>
                     <li><a href>Más ...</a>
                         <ul>
-                            <li><a href="./src/menu.html">Carta</a></li>
+                            <li><a href="./src/noticias.html">Novedades</a></li>
                         </ul>
                     </li>
                     <li>
@@ -45,7 +45,7 @@
                         <h1>Bienvenidos a Ramses</h1>
                         <p>Esperamos que disfrute de nuestra hospitalidad y
                             servicion para satisfacer todas sus necesidades.</p>
-                        <button class="btn-saber-mas"><a href="menu.html">Saber
+                        <button class="btn-saber-mas"><a href="noticias.html">Saber
                                 Mas -></a></button>
                     </div>
                 </div>
