finalizacion de pagina principal y cmabio de estructura

--- a/web-lenguajes/index.html
+++ b/web-lenguajes/index.html
@@ -45,7 +45,7 @@
                         <h1>Bienvenidos a Ramses</h1>
                         <p>Esperamos que disfrute de nuestra hospitalidad y
                             servicion para satisfacer todas sus necesidades.</p>
-                        <button class="btn-saber-mas"><a href="noticias.html">Saber
+                        <button class="btn-saber-mas"><a href="./src/noticias.html">Saber
                                 Mas -></a></button>
                     </div>
                 </div>
