--- a/web-lenguajes/src/noticias.html
+++ b/web-lenguajes/src/noticias.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../style/style.css">
-    <link rel="stylesheet" href="../style/menu.css">
+    <link rel="stylesheet" href="../style/noticias.css">
     <title>Restaurante Ejemplo</title>
     <style>
     </style>
@@ -31,25 +30,7 @@
             </ul>
         </nav>
     </div>
-    <div class="container">
-        <div class="sidebar">
-            <h2>Publicidad</h2>
-            <p>Anuncio 1</p>
-        </div>
-        <div class="content">
-            <div class="bienvenida">
-                <div class="contenidos">
-                    <h1>Bienvenidos a Ramses</h1>
-                    <p>Esperamos que disfrute de nuestra hospitalidad y servicion para satisfacer todas sus necesidades.</p>
-                    <button class="btn-saber-mas"><a  href="menu.html">Saber Mas -></a></button>
-                </div>
-            </div>
-        </div>
-        <div class="sidebar">
-            <h2>Publicidad</h2>
-            <p>Anuncio 2</p>
-        </div>
-    </div>
+    <div class="container"></div>
     <div class="footer">
         <p>&copy; 2025 Restaurante Ejemplo. Todos los derechos reservados.</p>
     </div>
