subir estilos y correcciones

--- a/web-lenguajes/index.html
+++ b/web-lenguajes/index.html
@@ -81,7 +81,7 @@
             </div>
         </div>
         <div class="footer">
-            <p>&copy; 2025 Restaurante Ejemplo. Todos los derechos
+            <p>&copy; 2025 Restaurante Ramses. Todos los derechos
                 reservados.</p>
         </div>
     </body>
