--- a/web-lenguajes/src/noticias.html
+++ b/web-lenguajes/src/noticias.html
@@ -12,27 +12,32 @@
     <div class="header">
         <nav>
             <ul>
-                <li><a href="#">Inicio</a></li>
-                <li><a href="">Menú</a></li>
-                <li><a href="">Más ...</a>
+                <li><a href="../index.html">Inicio</a></li>
+                <li><a href>Menú</a></li>
+                <li><a href>Más ...</a>
                     <ul>
-                        <li><a href="">Opcion</a></li>
-                        <li><a href="">Opcion</a></li>
+                        <li><a href="./src/noticias.html">Novedades</a></li>
                     </ul>
                 </li>
                 <li>
-                    <a href="">Cuenta</a>
+                    <a href>Cuenta</a>
                     <ul>
-                        <li><a href="">Iniciar sesion</a></li>
-                        <li><a href="">Registrarse</a></li>
+                        <li><a href>Iniciar sesion</a></li>
+                        <li><a href>Registrarse</a></li>
                     </ul>
                 </li>
             </ul>
         </nav>
     </div>
-    <div class="container"></div>
+    <div class="container">
+        <h1 class="titulo-centrado">Novedades de Ramses</h1>
+        <p class="subtitulo">El Ramses esta a la ultima; aqui publicamos lo ultimo de lo ultimo en gastronomia e informacion relevante.</p>
+        <div class="noticias">
+            <div class="noticia"></div>
+        </div>
+    </div>
     <div class="footer">
-        <p>&copy; 2025 Restaurante Ejemplo. Todos los derechos reservados.</p>
+        <p>&copy; 2025 Restaurante Ramses. Todos los derechos reservados.</p>
     </div>
 </body>
 </html>
