--- a/web-lenguajes/index.html
+++ b/web-lenguajes/index.html
@@ -14,17 +14,17 @@
             <nav>
                 <ul>
                     <li><a href="#">Inicio</a></li>
-                    <li><a href>Menú</a></li>
-                    <li><a href>Más ...</a>
-                        <ul>
-                            <li><a href="./src/noticias.html">Novedades</a></li>
+                    <li><a>Menú</a></li>
+                    <li><a>Más ...</a>
+                        <ul class="subitemul">
+                            <li class="subitem"><a href="./src/noticias.html">Novedades</a></li>
                         </ul>
                     </li>
                     <li>
                         <a href>Cuenta</a>
-                        <ul>
-                            <li><a href>Iniciar sesion</a></li>
-                            <li><a href>Registrarse</a></li>
+                        <ul class="subitemul">
+                            <li class="subitem"><a href="./src/login.html">Iniciar sesion</a></li>
+                            <li class="subitem"><a href="./src/singin.html">Registrarse</a></li>
                         </ul>
                     </li>
                 </ul>
