--- a/web-lenguajes/src/noticias.html
+++ b/web-lenguajes/src/noticias.html
@@ -13,17 +13,17 @@
         <nav>
             <ul>
                 <li><a href="../index.html">Inicio</a></li>
-                <li><a href>Menú</a></li>
-                <li><a href>Más ...</a>
-                    <ul>
-                        <li><a href="./src/noticias.html">Novedades</a></li>
+                <li><a>Menú</a></li>
+                <li><a>Más ...</a>
+                    <ul class="subitemul">
+                        <li class="subitem"><a href="#">Novedades</a></li>
                     </ul>
                 </li>
                 <li>
                     <a href>Cuenta</a>
-                    <ul>
-                        <li><a href>Iniciar sesion</a></li>
-                        <li><a href>Registrarse</a></li>
+                    <ul class="subitemul">
+                        <li class="subitem"><a href="./login.html">Iniciar sesion</a></li>
+                        <li class="subitem"><a href="./singin.html">Registrarse</a></li>
                     </ul>
                 </li>
             </ul>
