--- a/web-lenguajes/src/noticias.html
+++ b/web-lenguajes/src/noticias.html
@@ -32,8 +32,13 @@
     <div class="container">
         <h1 class="titulo-centrado">Novedades de Ramses</h1>
         <p class="subtitulo">El Ramses esta a la ultima; aqui publicamos lo ultimo de lo ultimo en gastronomia e informacion relevante.</p>
-        <div class="noticias">
-            <div class="noticia"></div>
+        <div class="cont-noticias">
+            <div class="noticia1"></div>
+            <div class="noticia2"></div>
+            <div class="noticia3"></div>
+            <div class="noticia1"></div>
+            <div class="noticia2"></div>
+            <div class="noticia3"></div>
         </div>
     </div>
     <div class="footer">
