--- a/web-lenguajes/src/noticias.html
+++ b/web-lenguajes/src/noticias.html
@@ -41,12 +41,43 @@
                 <p class="text-articulo">Texto largo de un articolo Lorem ipsum dolor sit amet consectetur adipisicing
                     elit. Quas fugiat ratione excepturi architecto obcaecati tempore sed itaque aperiam facilis quam
                     modi deleniti exercitationem eveniet, repellendus adipisci quidem voluptate quasi! Dignissimos!</p>
+                <a href="#" class="enlaceart">Saber mas</a>
             </div>
-            <div class="noticia2"></div>
-            <div class="noticia3"></div>
-            <div class="noticia1"></div>
-            <div class="noticia2"></div>
-            <div class="noticia3"></div>
+            <div class="noticia2">
+                <p class="titulo-articulo">Articulo 1</p>
+                <p class="text-articulo">Texto largo de un articolo Lorem ipsum dolor sit amet consectetur adipisicing
+                    elit. Quas fugiat ratione excepturi architecto obcaecati tempore sed itaque aperiam facilis quam
+                    modi deleniti exercitationem eveniet, repellendus adipisci quidem voluptate quasi! Dignissimos!</p>
+                <a href="#" class="enlaceart">Saber mas</a>
+            </div>
+            <div class="noticia3">
+                <p class="titulo-articulo">Articulo 1</p>
+                <p class="text-articulo">Texto largo de un articolo Lorem ipsum dolor sit amet consectetur adipisicing
+                    elit. Quas fugiat ratione excepturi architecto obcaecati tempore sed itaque aperiam facilis quam
+                    modi deleniti exercitationem eveniet, repellendus adipisci quidem voluptate quasi! Dignissimos!</p>
+                <a href="#" class="enlaceart">Saber mas</a>
+            </div>
+            <div class="noticia1">
+                <p class="titulo-articulo">Articulo 1</p>
+                <p class="text-articulo">Texto largo de un articolo Lorem ipsum dolor sit amet consectetur adipisicing
+                    elit. Quas fugiat ratione excepturi architecto obcaecati tempore sed itaque aperiam facilis quam
+                    modi deleniti exercitationem eveniet, repellendus adipisci quidem voluptate quasi! Dignissimos!</p>
+                <a href="#" class="enlaceart">Saber mas</a>
+            </div>
+            <div class="noticia2">
+                <p class="titulo-articulo">Articulo 1</p>
+                <p class="text-articulo">Texto largo de un articolo Lorem ipsum dolor sit amet consectetur adipisicing
+                    elit. Quas fugiat ratione excepturi architecto obcaecati tempore sed itaque aperiam facilis quam
+                    modi deleniti exercitationem eveniet, repellendus adipisci quidem voluptate quasi! Dignissimos!</p>
+                <a href="#" class="enlaceart">Saber mas</a>
+            </div>
+            <div class="noticia3">
+                <p class="titulo-articulo">Articulo 1</p>
+                <p class="text-articulo">Texto largo de un articolo Lorem ipsum dolor sit amet consectetur adipisicing
+                    elit. Quas fugiat ratione excepturi architecto obcaecati tempore sed itaque aperiam facilis quam
+                    modi deleniti exercitationem eveniet, repellendus adipisci quidem voluptate quasi! Dignissimos!</p>
+                <a href="#" class="enlaceart">Saber mas</a>
+            </div>
         </div>
     </div>
     <div class="footer">
