Subiendo cambios de reservas, titulos de paginas y finalizacion del proyecto

--- a/web-lenguajes/index.html
+++ b/web-lenguajes/index.html
@@ -81,8 +81,7 @@
             </div>
         </div>
         <div class="footer">
-            <p>&copy; 2025 Restaurante Ramses. Todos los derechos
-                reservados.</p>
+            <p><a style="text-decoration: none;" href="mailto:ramses@gmail.com">Contactanos</a>   ||   &copy; 2025 Restaurante Ramses. Todos los derechos reservados.   ||    Playa de Ses Illetes</p>
         </div>
     </body>
     </html>
