--- a/web-lenguajes/src/singin.html
+++ b/web-lenguajes/src/singin.html
@@ -9,11 +9,11 @@
     <body>
         <div class="header">
             <nav>
-                <a href="#"><img src="img/logo-ramses.png" class="logo-r"
+                <a href="#"><img src="../img/logo-ramses.png" class="logo-r"
                         alt></a>
                 <ul>
-                    <li><a href="#">Inicio</a></li>
-                    <li><a href="./src/noticias.html">Novedades</a></li>
+                    <li><a href="../index.html">Inicio</a></li>
+                    <li><a href="./noticias.html">Novedades</a></li>
                     <li><a>Más ...</a>
                         <ul class="subitemul">
                             <li class="subitem"><a target="_blank"
@@ -28,10 +28,9 @@
                         <a href>Cuenta</a>
                         <ul class="subitemul">
                             <li class="subitem"><a
-                                    href="./src/login.html">Iniciar
-                                    sesion</a></li>
+                                    href="#">Iniciar Sesion</a></li>
                             <li class="subitem"><a
-                                    href="./src/singin.html">Registrarse</a></li>
+                                    href="#">Registrarse</a></li>
                         </ul>
                     </li>
                 </ul>
